--- a/src/features/Pizza/PizzaItem.module.css
+++ b/src/features/Pizza/PizzaItem.module.css
@@ -1,3 +1,10 @@
+.picture,
+.category,
+.name,
+.price {
+  padding-inline: var(--spacing-300);
+}
+
 .picture {
   position: relative;
 }
