--- a/src/ui/CartButton/CartButton.module.css
+++ b/src/ui/CartButton/CartButton.module.css
@@ -10,8 +10,8 @@
 
   position: absolute;
   bottom: 0;
-  left: 0;
-  transform: translate(50%, 50%);
+  left: 50%;
+  transform: translate(-50%, 50%);
 }
 
 .span {
