--- a/src/ui/Main/Main.module.css
+++ b/src/ui/Main/Main.module.css
@@ -45,12 +45,5 @@
 }
 
 .main {
-  margin: var(--spacing-300);
-}
-
-.h2 {
-  font-size: var(--font-size-preset1);
-  font-weight: var(--font-weight-preset1);
-  line-height: var(--line-height-preset1);
-  color: var(--color-rose-900);
+  /* margin: var(--spacing-300); */
 }
